Use hrbrthemes::theme_ipsum_rc()

--- a/README.Rmd
+++ b/README.Rmd
@@ -67,15 +67,14 @@ billionaires %>%
     theme_minimal() +
     hrbrthemes::scale_x_percent() +
     hrbrthemes::scale_y_percent() +
-    hrbrthemes::theme_ipsum() +
+    hrbrthemes::theme_ipsum_rc() +
     labs(x = "Cumulative Percentage of Billionaires",
          y = "Cumulative Percentage of Total Net Worth",
          title = "Real Estate is a Relatively Equal Field",
          caption = "Source: https://www.bloomberg.com/billionaires/ (accessed February 8, 2018)")
 ```
 
-The annotate_ineq() function allows you to label the chart with inequality statistics such as the Gini coefficient:
-
+The `annotate_ineq()` function allows you to label the chart with inequality statistics such as the Gini coefficient:
 
 ```{r}
 billionaires %>%
@@ -86,7 +85,7 @@ billionaires %>%
     theme_minimal() +
     hrbrthemes::scale_x_percent() +
     hrbrthemes::scale_y_percent() +
-    hrbrthemes::theme_ipsum() +
+    hrbrthemes::theme_ipsum_rc() +
     labs(x = "Cumulative Percentage of the Top 500 Billionaires",
          y = "Cumulative Percentage of Total Net Worth",
          title = "Inequality Among Billionaires",
@@ -105,7 +104,7 @@ billionaires %>%
     coord_fixed() +
     hrbrthemes::scale_x_percent() +
     hrbrthemes::scale_y_percent() +
-    hrbrthemes::theme_ipsum() +
+    hrbrthemes::theme_ipsum_rc() +
     theme(legend.title = element_blank()) +
     labs(x = "Cumulative Percentage of Billionaires",
          y = "Cumulative Percentage of Total Net Worth",
@@ -121,7 +120,7 @@ billionaires %>%
     coord_fixed() +
     hrbrthemes::scale_x_percent() +
     hrbrthemes::scale_y_percent() +
-    hrbrthemes::theme_ipsum() +
+    hrbrthemes::theme_ipsum_rc() +
     theme(legend.title = element_blank()) +
     labs(x = "Cumulative Percentage of Billionaires",
          y = "Cumulative Percentage of Total Net Worth",
